# haskgag

./: README.md  haskgag.cabal  haskgagDatabase.db  stack.yaml
app/: Main.hs
src/: Controller.hs  Model.hs  ModelObjects.hs  Templates.hs
static/css/: app.css
test/: Spec.hs
