name:                haskgag
version:             0.1.0.0
synopsis:            Simple clone of 9gag
description:         Please see README.md
homepage:            https://git.iiet.pl/sirius4/haskgag
license:             BSD3
license-file:        LICENSE
author:              Piotr Gajdzica, Szymon Piechaczek
copyright:           2017 AGH
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Controller, Templates, ModelObjects, Model
  build-depends:       base >= 4.7 && < 5
                     , happstack-lite >= 7.3.0 && <= 7.3.6
                     , blaze-html >= 0.8.1.3
                     , text >= 1.2.2.0
                     , sqlite-simple >= 0.4.12.0
                     , QuickCheck >= 2.8.2
                     , HUnit >= 1.3.1.2
                     , directory >= 1.2.6.2
  default-language:    Haskell2010

executable haskgag-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskgag
                     , happstack-lite
                     , blaze-html
                     , text
                     , sqlite-simple
                     , directory
  default-language:    Haskell2010

test-suite haskgag-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskgag
                     , text
                     , HUnit
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://git.iiet.pl/sirius4/haskgag
